--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ html {
     min-width: 300px;
     margin: 0 auto;
     justify-content: flex-end;
+    height: inherit;
 }
 
 .container-content {
@@ -21,7 +22,6 @@ html {
     max-width: 1140px;
     min-width: 300px;
     margin: 0 auto;
-    justify-content: space-between;
     flex-wrap: wrap;
 }
 
@@ -30,17 +30,67 @@ html {
     border-style: solid;
     border-width: thin;
     border-color: darkgray;
-    height: 40px;
+    height: 45px;
     border-top: none;
     border-left: none;
     border-right: none;
 }
 
 .menu-button {
-    float: right;
-    height: 40px;
     border: none;
     background: none;
+}
+
+.search-line {
+    align-self: center;
+    height: 25px;
+}
+
+.search-line-item {
+    margin-right: 10px;
+    height: -webkit-fill-available;
+}
+
+.search-text {
+    text-align: center;
+}
+
+.basket {
+    display: flex;
+    flex-flow: column;
+    justify-content: space-between;
+    position: fixed;
+    top: 20%;
+    left: 50%;
+    width: 500px;
+    height: 300px;
+    border: solid;
+    border-width: thin;
+    border-color: darkgray;
+    margin-left: -250px;
+    background: white;
+}
+
+.basket-close-button {
+    width: 50px;
+    height: 24px;
+    align-self: end;
+    margin-bottom: 10px;
+    margin-right: 10px;
+    border: none;
+    background: none;
+}
+
+.header-basket {
+    border-style: solid;
+    border-width: thin;
+    border-color: darkgray;
+    height: 45px;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    text-align: center;
+    align-content: center;
 }
 
 .menu-button:hover {
@@ -49,6 +99,16 @@ html {
 }
 
 .menu-button:active {
+    border: solid;
+    border-style: inset;
+}
+
+.basket-close-button:hover {
+    border: solid;
+    border-style: outset;
+}
+
+.basket-close-button:active {
     border: solid;
     border-style: inset;
 }
@@ -75,6 +135,11 @@ html {
 .product-image {
     width: 200px;
     height: 200px;
+}
+
+.plug-text {
+    justify-content: center;
+    margin-top: 45px;
 }
 
 @media (max-width: 1204px) {
